--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,9 @@
 <resources>
     <dimen name="digital_text_size">10dp</dimen>
     <dimen name="digital_text_size_round">15dp</dimen>
+    <dimen name="digital_text_size_large">45dp</dimen>
+    <dimen name="digital_text_size_large_round">45dp</dimen>
     <dimen name="digital_x_offset">15dp</dimen>
     <dimen name="digital_x_offset_round">25dp</dimen>
-    <dimen name="digital_y_offset">100dp</dimen>
+    <dimen name="digital_y_offset">140dp</dimen>
 </resources>
