--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="arc_stroke_width">4dp</dimen>
     <dimen name="notification_indicator_x">169dp</dimen>
     <dimen name="notification_indicator_y">365dp</dimen>
+    <dimen name="layout_padding">3dp</dimen>
     <!--
     Because the window insets on round devices are larger than 15dp, this padding only applies
     to square screens.
